--- a/Dandy/WebContent/WEB-INF/web.xml
+++ b/Dandy/WebContent/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>DDController</servlet-name>
+    <servlet-class>com.dandy.controller.DandyFrontController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DDController</servlet-name>
+    <url-pattern>*.dandy</url-pattern>
+  </servlet-mapping>
 </web-app>
