--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/jsp-api.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/servlet-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/lib/cos.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
