--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -6,7 +6,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_151/lib/ext/cos.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/apache-tomcat-8.0.48/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/apache-tomcat-8.0.48/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/R/R-3.4.3/library/Rserve/java/REngine.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/R/R-3.4.3/library/Rserve/java/Rserve.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
