--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="lib" path="C:/Program Files/R/R-3.4.3/library/Rserve/java/REngine.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/R/R-3.4.3/library/Rserve/java/Rserve.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/cos-26Dec2008/lib/cos.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
