--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="lib" path="C:/Program Files/R/R-3.4.3/library/Rserve/java/Rserve.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/jsp-api.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/cos-26Dec2008/lib/cos.jar"/>
+	<classpathentry kind="lib" path="G:/Developer/JAVA_Libaray/cos-26Dec2008/lib/cos.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
