--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -4,10 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/REngine.jar"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/Rserve.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_151/lib/ext/cos.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/apache-tomcat-8.0.48/lib/jsp-api.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.48/apache-tomcat-8.0.48/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Documents/R/win-library/3.4/rJava/jri/JRI.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Documents/R/win-library/3.4/rJava/jri/JRIEngine.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Documents/R/win-library/3.4/rJava/jri/REngine.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
