--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -4,11 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/cos.jar"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/jsp-api.jar"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/REngine.jar"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/Rserve.jar"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/servlet-api.jar"/>
-	<classpathentry kind="lib" path="G:/Developer/dandy/jsoup-1.11.2.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/dandy/cos.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/dandy/jsoup-1.11.2.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/dandy/jsp-api.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/dandy/REngine.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/dandy/Rserve.jar"/>
+	<classpathentry kind="lib" path="D:/developer/JAVA_Library/dandy/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
