--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -4,11 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/Dandy/cos.jar"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/Dandy/jsoup-1.11.2.jar"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/Dandy/jsp-api.jar"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/Dandy/REngine.jar"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/Dandy/Rserve.jar"/>
-	<classpathentry kind="lib" path="D:/developer/JAVA_Library/Dandy/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Desktop/라이브러리 추가/cos.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Desktop/라이브러리 추가/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Desktop/라이브러리 추가/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Desktop/라이브러리 추가/REngine.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Desktop/라이브러리 추가/Rserve.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qusrh/Desktop/라이브러리 추가/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
