지선 :) constract 이용약관 페이지 모달로 변경

--- a/Dandy/.classpath
+++ b/Dandy/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="C:/Users/JUNG JI SUN/Desktop/b_class/team_project_dandy/REngine.jar"/>
 	<classpathentry kind="lib" path="C:/Users/JUNG JI SUN/Desktop/b_class/team_project_dandy/Rserve.jar"/>
 	<classpathentry kind="lib" path="C:/Users/JUNG JI SUN/Desktop/b_class/team_project_dandy/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/JUNG JI SUN/Desktop/b_class/team_project_dandy/poi-3.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
